[gd_scene load_steps=7 format=3 uid="uid://dn7j527vmegka"]

[ext_resource type="Script" path="res://main.gd" id="1_03no5"]
[ext_resource type="Theme" uid="uid://c2t22owqfyns8" path="res://theme.tres" id="1_d2mbj"]
[ext_resource type="PackedScene" uid="uid://mna8adl51ysw" path="res://space_remote_systems.tscn" id="1_og4bw"]
[ext_resource type="PackedScene" uid="uid://donu4757x48qs" path="res://space_local_system.tscn" id="2_ea67m"]
[ext_resource type="PackedScene" uid="uid://bbo63hpxfc223" path="res://space_near.tscn" id="2_xkawo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2amsc"]
bg_color = Color(0, 0, 0, 1)

[node name="MainControl" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
theme = ExtResource("1_d2mbj")
script = ExtResource("1_03no5")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2amsc")

[node name="SubViewportContainer_SpaceLocal" type="SubViewportContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceLocal"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SpaceLocalSystem" parent="SubViewportContainer_SpaceLocal/SubViewport" instance=ExtResource("2_ea67m")]

[node name="SubViewportContainer_SpaceRemote" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_force_pass_scroll_events = false

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceRemote"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SpaceRemoteSystems" parent="SubViewportContainer_SpaceRemote/SubViewport" instance=ExtResource("1_og4bw")]

[node name="SubViewportContainer_SpaceNear" type="SubViewportContainer" parent="."]
z_index = 2
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_SpaceNear"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SpaceNear" parent="SubViewportContainer_SpaceNear/SubViewport" instance=ExtResource("2_xkawo")]
